// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`displays correct first child 1`] = `
<div
  class="search-form-div"
>
  <input
    class="form-control me-2"
    placeholder="search for..."
    type="text"
    value=""
  />
</div>
`;

exports[`should take a snapshot 1`] = `
<DocumentFragment>
  <div
    class="search-form-div"
  >
    <input
      class="form-control me-2"
      placeholder="search for..."
      type="text"
      value=""
    />
  </div>
</DocumentFragment>
`;
